ctypes_canapedll/CANapAPI_stripped.h

enum TRecorderType
{
  eTRecorderTypeMDF         = 0, 
  eTRecorderTypeILinkRT     = 1, 
  eTRecorderTypeBLF         = 2  
};
enum TFormat
{
  ECU_INTERNAL = 0,                 
  PHYSICAL_REPRESENTATION = 1,      
};
enum TValueType
{
  VALUE  = 0, 
  CURVE  = 1, 
  MAP    = 2, 
  AXIS   = 3, 
  ASCII  = 4, 
  VAL_BLK= 5  
};
enum TObjectType 
{
  OTT_MEASURE   = 0, 
  OTT_CALIBRATE = 1, 
  OTT_UNKNOWN   = 2  
};
struct MeasurementListEntries
{
 unsigned int ItemCount;            
 struct TMeasurementListEntry **Entries;   
};
struct TLayoutCoeffs
{
  short OffNx;    
  short OffNy;    
  short OffX;     
  short FakX;     
  short OffY;     
  short FakY;     
  short OffW;     
  short FakWx;    
  short FakWy;    
};
 
typedef union { 
  enum TValueType type;
  struct {
    enum TValueType type;
    double value; 
  } value;        
  struct {
    enum TValueType type; 
    short dimension;        
    #if 1
    double*       pAxis;    
    #else
    TReservedOffset_stream axis;
    #endif
    unsigned long oAxis;    
  } axis;      
  struct {        
    enum TValueType type;        
    short len;              
    #if 1
    char*         pAscii;   
    #else
    TReservedOffset_stream ascii;
    #endif
    unsigned long oAscii;   
  } ascii;      
  struct {
    enum TValueType type;
    short dimension;        
    #if 1
    double*       pAxis;    
    #else
    TReservedOffset_stream axis;
    #endif
    unsigned long oAxis;    
    #if 1
    double*       pValues;  
    #else
    TReservedOffset_stream values;
    #endif
    unsigned long oValues;  
  } curve;     
  struct {
    enum TValueType type;
    short xDimension;      
    short yDimension;      
    #if 1
    double*       pXAxis;  
    unsigned long oXAxis;  
    double*       pYAxis;  
    unsigned long oYAxis;  
    double*       pValues; 
    unsigned long oValues; 
    #else
    TReservedOffset_stream xAxis;
    unsigned long oXAxis;
    TReservedOffset_stream yAxis;
    unsigned long oYAxis;
    TReservedOffset_stream values;
    unsigned long oValues;
    #endif
  } map;       
  struct {
    enum TValueType type;
    short xDimension;      
    short yDimension;      
#if 1
    double*       values;  
    unsigned long oValues; 
#else
    TReservedOffset_stream values;
    unsigned long oValues;
#endif
  } valblk;
}
TCalibrationObjectValueEx;
 
typedef union { 
  enum TValueType type;
  struct {
    enum TValueType type;
    double value; 
  } value;        
  struct {
    enum TValueType type; 
    short dimension;       
    #if 1
    double*       axis;    
    #else
    TReservedOffset_stream axis;
    #endif
  } axis;      
  struct {        
    enum TValueType type;        
    short len;              
    #if 1
    char*          ascii;   
    #else
    TReservedOffset_stream ascii;
    #endif
  } ascii;      
  struct {
    enum TValueType type;
    short dimension;        
    #if 1
    double*       axis;    
    double*       values;  
    #else
    TReservedOffset_stream        axis;
    TReservedOffset_stream        values;
    #endif
  } curve;     
  struct {
    enum TValueType type;
    short xDimension;      
    short yDimension;      
    #if 1
    double*       xAxis;  
    double*       yAxis;  
    double*       values; 
    #else
    TReservedOffset_stream        xAxis;
    TReservedOffset_stream        yAxis;
    TReservedOffset_stream        values;
    #endif
  } map;       
  struct {
    enum TValueType type;
    short xDimension;      
    short yDimension;      
#if 1
    double*       values; 
#else
    TReservedOffset_stream        values;
#endif
  } valblk;
}
TCalibrationObjectValue;
 
typedef struct { 
  #if 1
  const char     *description;  
  #else
  TReservedOffset_stream description;
  #endif
  unsigned short  taskId;       
  unsigned long   taskCycle;    
}
TTaskInfo
;
 
typedef struct {
  #if 1
  const char     *description;  
  #else
  TReservedOffset_stream description;
  #endif
  unsigned short  taskId;       
  unsigned long   taskCycle;    
  unsigned long   eventChannel;
}
TTaskInfo2
;
typedef enum {
  TYPE_SWITCH_ONLINE,  
  TYPE_SWITCH_OFFLINE, 
}TAsap3ECUState;
struct tAsap3Hdl;
typedef struct tAsap3Hdl *TAsap3Hdl;
typedef unsigned long *TRecorderID;
typedef unsigned short TModulHdl;
typedef struct {
  TModulHdl module;         
  unsigned short taskId;    
  unsigned short noSamples; 
} tFifoSize;
typedef enum {
  ASAP3_DRIVER_UNKNOWN     = 0,        
  ASAP3_DRIVER_CCP         = 1,        
  ASAP3_DRIVER_XCP         = 2,        
  ASAP3_DRIVER_CAN         = 20,       
  ASAP3_DRIVER_HEXEDIT     = 40,       
  ASAP3_DRIVER_ANALOG      = 50,       
  ASAP3_DRIVER_CANOPEN     = 60,       
  ASAP3_DRIVER_CANDELA     = 70,       
  ASAP3_DRIVER_ENVIRONMENT = 80,       
  ASAP3_DRIVER_LIN         = 90,       
  ASAP3_DRIVER_FLX         = 100,      
  ASAP3_DRIVER_FUNC        = 110,      
  ASAP3_DRIVER_NIDAQMX     = 120,      
  ASAP3_DRIVER_XCP_RAMSCOPE= 130,      
  ASAP3_DRIVER_SYSTEM      = 140,      
  ASAP3_DRIVER_ETH         = 150,      
  ASAP3_DAIO_SYSTEM        = 160,      
  ASAP3_DRIVER_SOME_IP     = 170,      
  ASAP3_DRIVER_DLT         = 180       
} tDriverType;
typedef enum
{
 eT_MEASUREMENT_STOPPED    = 0, 
 eT_MEASUREMENT_INIT       = 1, 
 eT_MEASUREMENT_STOP_ON_START       = 2, 
 eT_MEASUREMENT_EXIT       = 3, 
 eT_MEASUREMENT_THREAD_RUNNING      = 4, 
 eT_MEASUREMENT_RUNNING    = 5  
}tMeasurementState;
extern bool ASAP3_EXPORT CALL_CONV Asap3GetCommunicationType(TAsap3Hdl hdl, TModulHdl module, char ** commType);
bool ASAP3_EXPORT CALL_CONV Asap3ECUOnOffline(TAsap3Hdl hdl, TModulHdl module,TAsap3ECUState State,bool download);
bool ASAP3_EXPORT CALL_CONV Asap3IsECUOnline(TAsap3Hdl hdl, TModulHdl module,TAsap3ECUState *State);
extern bool ASAP3_EXPORT CALL_CONV Asap3ReadByAddress(TAsap3Hdl hdl, TModulHdl module,
                   unsigned long addr, unsigned char addrExt,
                   unsigned long size, unsigned char * data);
extern bool ASAP3_EXPORT CALL_CONV Asap3WriteByAddress(TAsap3Hdl hdl, TModulHdl module,
                   unsigned long addr, unsigned char addrExt,
                   unsigned long size, unsigned char * data);
extern bool ASAP3_EXPORT CALL_CONV Asap3ReadCalibrationObject(TAsap3Hdl hdl, TModulHdl module,
                   const char *calibrationObjectName, enum TFormat format,
                   TCalibrationObjectValue * value);
extern bool ASAP3_EXPORT CALL_CONV Asap3ReadCalibrationObject2(TAsap3Hdl hdl, TModulHdl module,
                   const char *calibrationObjectName,
                   enum TFormat format, bool forceupload,TCalibrationObjectValue *value);
extern bool ASAP3_EXPORT CALL_CONV Asap3ReadCalibrationObjectEx(TAsap3Hdl hdl, TModulHdl module,
                   const char *calibrationObjectName, enum TFormat format,
                   TCalibrationObjectValueEx * value);
extern bool ASAP3_EXPORT CALL_CONV Asap3WriteCalibrationObject(TAsap3Hdl hdl, TModulHdl module,
                   const char *calibrationObjectName, enum TFormat format,
                   TCalibrationObjectValue * value);
extern bool ASAP3_EXPORT CALL_CONV Asap3WriteCalibrationObjectEx(TAsap3Hdl hdl, TModulHdl module,
                   const char *calibrationObjectName, enum TFormat format,
                   TCalibrationObjectValueEx * value);
extern bool ASAP3_EXPORT CALL_CONV Asap3TestObject(TAsap3Hdl hdl, TModulHdl module,
                   const char * objectName, enum TObjectType * type);
extern bool ASAP3_EXPORT CALL_CONV Asap3CalibrationObjectInfo(TAsap3Hdl hdl, TModulHdl module,
                   const char *calibrationObjectName,
                   short * xDimension, short * yDimension);
extern bool ASAP3_EXPORT CALL_CONV Asap3CalibrationObjectInfoEx(TAsap3Hdl hdl, TModulHdl module,
                   const char *calibrationObjectName,
                   short *xDimension, short *yDimension,enum TValueType *type);
extern bool ASAP3_EXPORT CALL_CONV Asap3CalibrationObjectRecordInfo(TAsap3Hdl hdl, TModulHdl module,
                   const char *calibrationObjectName, struct TLayoutCoeffs * coeffs,
                   short * xDimension, short * yDimension);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetEcuTasks(TAsap3Hdl hdl, TModulHdl module,
                   TTaskInfo * taskInfo, unsigned short * noTasks,
                   unsigned short maxTaskInfo);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetEcuTasks2(TAsap3Hdl hdl, TModulHdl module,
                   TTaskInfo2 * taskInfo2, unsigned short *noTasks,
                   unsigned short maxTaskInfo);
extern bool ASAP3_EXPORT CALL_CONV Asap3CreateLoggerConfiguration(TAsap3Hdl hdl,TModulHdl module);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetEcuDriverType(TAsap3Hdl hdl, TModulHdl module,tDriverType *DriverType);
extern bool ASAP3_EXPORT CALL_CONV Asap3HasResumeMode(TAsap3Hdl hdl,TModulHdl module,bool *possible);
extern bool ASAP3_EXPORT CALL_CONV Asap3SetResumeMode(TAsap3Hdl hdl,TModulHdl module);
extern bool ASAP3_EXPORT CALL_CONV Asap3IsResumeModeActive(TAsap3Hdl hdl,TModulHdl module,bool *enabled);
extern bool ASAP3_EXPORT CALL_CONV Asap3ClearResumeMode(TAsap3Hdl hdl,TModulHdl module);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetChnlDefaultRaster(TAsap3Hdl hdl,  TModulHdl module,const char *measurementObjectName,unsigned short *taskId,unsigned short *downSampling);
extern bool ASAP3_EXPORT CALL_CONV Asap3SetupFifo(TAsap3Hdl hdl,
                   unsigned short nFifoSize,
                   tFifoSize fifoSize[]);
extern bool ASAP3_EXPORT CALL_CONV Asap3SetupDataAcquisitionChnl(TAsap3Hdl hdl,  TModulHdl module,
                   const char *measurementObjectName,
                   enum TFormat format, unsigned short taskId,
                   unsigned short pollingRate, bool save2File);
extern bool ASAP3_EXPORT CALL_CONV Asap3SetupDataAcquisitionChnl2(TAsap3Hdl hdl,  TModulHdl module,
                   const char *measurementObjectName,
                   enum TFormat format, unsigned short taskId,
                   unsigned short pollingRate, bool save2File,bool transfer_To_Client);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetMeasurementListEntries(TAsap3Hdl hdl,TModulHdl module,struct MeasurementListEntries **Items);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetMeasurementState(TAsap3Hdl hdl,tMeasurementState *State);
extern bool ASAP3_EXPORT CALL_CONV Asap3HasMCD3License(TAsap3Hdl hdl,bool *available);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetRecorderType(TAsap3Hdl hdl, TRecorderID recorderID, enum TRecorderType *RecorderType);