ctypes_canapedll/CANapAPI.py


# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 780
if _libs["CANapAPI64.dll"].has("Asap3GetCommunicationType", "stdcall"):
    Asap3GetCommunicationType = _libs["CANapAPI64.dll"].get("Asap3GetCommunicationType", "stdcall")
    Asap3GetCommunicationType.argtypes = [TAsap3Hdl, TModulHdl, POINTER(POINTER(c_char))]
    Asap3GetCommunicationType.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 781
if _libs["CANapAPI64.dll"].has("Asap3ECUOnOffline", "stdcall"):
    Asap3ECUOnOffline = _libs["CANapAPI64.dll"].get("Asap3ECUOnOffline", "stdcall")
    Asap3ECUOnOffline.argtypes = [TAsap3Hdl, TModulHdl, TAsap3ECUState, c_bool]
    Asap3ECUOnOffline.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 782
if _libs["CANapAPI64.dll"].has("Asap3IsECUOnline", "stdcall"):
    Asap3IsECUOnline = _libs["CANapAPI64.dll"].get("Asap3IsECUOnline", "stdcall")
    Asap3IsECUOnline.argtypes = [TAsap3Hdl, TModulHdl, POINTER(TAsap3ECUState)]
    Asap3IsECUOnline.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 783
if _libs["CANapAPI64.dll"].has("Asap3ReadByAddress", "stdcall"):
    Asap3ReadByAddress = _libs["CANapAPI64.dll"].get("Asap3ReadByAddress", "stdcall")
    Asap3ReadByAddress.argtypes = [TAsap3Hdl, TModulHdl, c_ulong, c_ubyte, c_ulong, POINTER(c_ubyte)]
    Asap3ReadByAddress.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 786
if _libs["CANapAPI64.dll"].has("Asap3WriteByAddress", "stdcall"):
    Asap3WriteByAddress = _libs["CANapAPI64.dll"].get("Asap3WriteByAddress", "stdcall")
    Asap3WriteByAddress.argtypes = [TAsap3Hdl, TModulHdl, c_ulong, c_ubyte, c_ulong, POINTER(c_ubyte)]
    Asap3WriteByAddress.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 789
if _libs["CANapAPI64.dll"].has("Asap3ReadCalibrationObject", "stdcall"):
    Asap3ReadCalibrationObject = _libs["CANapAPI64.dll"].get("Asap3ReadCalibrationObject", "stdcall")
    Asap3ReadCalibrationObject.argtypes = [TAsap3Hdl, TModulHdl, String, enum_TFormat, POINTER(TCalibrationObjectValue)]
    Asap3ReadCalibrationObject.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 792
if _libs["CANapAPI64.dll"].has("Asap3ReadCalibrationObject2", "stdcall"):
    Asap3ReadCalibrationObject2 = _libs["CANapAPI64.dll"].get("Asap3ReadCalibrationObject2", "stdcall")
    Asap3ReadCalibrationObject2.argtypes = [TAsap3Hdl, TModulHdl, String, enum_TFormat, c_bool, POINTER(TCalibrationObjectValue)]
    Asap3ReadCalibrationObject2.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 795
if _libs["CANapAPI64.dll"].has("Asap3ReadCalibrationObjectEx", "stdcall"):
    Asap3ReadCalibrationObjectEx = _libs["CANapAPI64.dll"].get("Asap3ReadCalibrationObjectEx", "stdcall")
    Asap3ReadCalibrationObjectEx.argtypes = [TAsap3Hdl, TModulHdl, String, enum_TFormat, POINTER(TCalibrationObjectValueEx)]
    Asap3ReadCalibrationObjectEx.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 798
if _libs["CANapAPI64.dll"].has("Asap3WriteCalibrationObject", "stdcall"):
    Asap3WriteCalibrationObject = _libs["CANapAPI64.dll"].get("Asap3WriteCalibrationObject", "stdcall")
    Asap3WriteCalibrationObject.argtypes = [TAsap3Hdl, TModulHdl, String, enum_TFormat, POINTER(TCalibrationObjectValue)]
    Asap3WriteCalibrationObject.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 801
if _libs["CANapAPI64.dll"].has("Asap3WriteCalibrationObjectEx", "stdcall"):
    Asap3WriteCalibrationObjectEx = _libs["CANapAPI64.dll"].get("Asap3WriteCalibrationObjectEx", "stdcall")
    Asap3WriteCalibrationObjectEx.argtypes = [TAsap3Hdl, TModulHdl, String, enum_TFormat, POINTER(TCalibrationObjectValueEx)]
    Asap3WriteCalibrationObjectEx.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 804
if _libs["CANapAPI64.dll"].has("Asap3TestObject", "stdcall"):
    Asap3TestObject = _libs["CANapAPI64.dll"].get("Asap3TestObject", "stdcall")
    Asap3TestObject.argtypes = [TAsap3Hdl, TModulHdl, String, POINTER(enum_TObjectType)]
    Asap3TestObject.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 806
if _libs["CANapAPI64.dll"].has("Asap3CalibrationObjectInfo", "stdcall"):
    Asap3CalibrationObjectInfo = _libs["CANapAPI64.dll"].get("Asap3CalibrationObjectInfo", "stdcall")
    Asap3CalibrationObjectInfo.argtypes = [TAsap3Hdl, TModulHdl, String, POINTER(c_short), POINTER(c_short)]
    Asap3CalibrationObjectInfo.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 809
if _libs["CANapAPI64.dll"].has("Asap3CalibrationObjectInfoEx", "stdcall"):
    Asap3CalibrationObjectInfoEx = _libs["CANapAPI64.dll"].get("Asap3CalibrationObjectInfoEx", "stdcall")
    Asap3CalibrationObjectInfoEx.argtypes = [TAsap3Hdl, TModulHdl, String, POINTER(c_short), POINTER(c_short), POINTER(enum_TValueType)]
    Asap3CalibrationObjectInfoEx.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 812
if _libs["CANapAPI64.dll"].has("Asap3CalibrationObjectRecordInfo", "stdcall"):
    Asap3CalibrationObjectRecordInfo = _libs["CANapAPI64.dll"].get("Asap3CalibrationObjectRecordInfo", "stdcall")
    Asap3CalibrationObjectRecordInfo.argtypes = [TAsap3Hdl, TModulHdl, String, POINTER(struct_TLayoutCoeffs), POINTER(c_short), POINTER(c_short)]
    Asap3CalibrationObjectRecordInfo.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 815
if _libs["CANapAPI64.dll"].has("Asap3GetEcuTasks", "stdcall"):
    Asap3GetEcuTasks = _libs["CANapAPI64.dll"].get("Asap3GetEcuTasks", "stdcall")
    Asap3GetEcuTasks.argtypes = [TAsap3Hdl, TModulHdl, POINTER(TTaskInfo), POINTER(c_ushort), c_ushort]
    Asap3GetEcuTasks.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 818
if _libs["CANapAPI64.dll"].has("Asap3GetEcuTasks2", "stdcall"):
    Asap3GetEcuTasks2 = _libs["CANapAPI64.dll"].get("Asap3GetEcuTasks2", "stdcall")
    Asap3GetEcuTasks2.argtypes = [TAsap3Hdl, TModulHdl, POINTER(TTaskInfo2), POINTER(c_ushort), c_ushort]
    Asap3GetEcuTasks2.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 821
if _libs["CANapAPI64.dll"].has("Asap3CreateLoggerConfiguration", "stdcall"):
    Asap3CreateLoggerConfiguration = _libs["CANapAPI64.dll"].get("Asap3CreateLoggerConfiguration", "stdcall")
    Asap3CreateLoggerConfiguration.argtypes = [TAsap3Hdl, TModulHdl]
    Asap3CreateLoggerConfiguration.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 822
if _libs["CANapAPI64.dll"].has("Asap3GetEcuDriverType", "stdcall"):
    Asap3GetEcuDriverType = _libs["CANapAPI64.dll"].get("Asap3GetEcuDriverType", "stdcall")
    Asap3GetEcuDriverType.argtypes = [TAsap3Hdl, TModulHdl, POINTER(tDriverType)]
    Asap3GetEcuDriverType.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 823
if _libs["CANapAPI64.dll"].has("Asap3HasResumeMode", "stdcall"):
    Asap3HasResumeMode = _libs["CANapAPI64.dll"].get("Asap3HasResumeMode", "stdcall")
    Asap3HasResumeMode.argtypes = [TAsap3Hdl, TModulHdl, POINTER(c_bool)]
    Asap3HasResumeMode.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 824
if _libs["CANapAPI64.dll"].has("Asap3SetResumeMode", "stdcall"):
    Asap3SetResumeMode = _libs["CANapAPI64.dll"].get("Asap3SetResumeMode", "stdcall")
    Asap3SetResumeMode.argtypes = [TAsap3Hdl, TModulHdl]
    Asap3SetResumeMode.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 825
if _libs["CANapAPI64.dll"].has("Asap3IsResumeModeActive", "stdcall"):
    Asap3IsResumeModeActive = _libs["CANapAPI64.dll"].get("Asap3IsResumeModeActive", "stdcall")
    Asap3IsResumeModeActive.argtypes = [TAsap3Hdl, TModulHdl, POINTER(c_bool)]
    Asap3IsResumeModeActive.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 826
if _libs["CANapAPI64.dll"].has("Asap3ClearResumeMode", "stdcall"):
    Asap3ClearResumeMode = _libs["CANapAPI64.dll"].get("Asap3ClearResumeMode", "stdcall")
    Asap3ClearResumeMode.argtypes = [TAsap3Hdl, TModulHdl]
    Asap3ClearResumeMode.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 827
if _libs["CANapAPI64.dll"].has("Asap3GetChnlDefaultRaster", "stdcall"):
    Asap3GetChnlDefaultRaster = _libs["CANapAPI64.dll"].get("Asap3GetChnlDefaultRaster", "stdcall")
    Asap3GetChnlDefaultRaster.argtypes = [TAsap3Hdl, TModulHdl, String, POINTER(c_ushort), POINTER(c_ushort)]
    Asap3GetChnlDefaultRaster.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 828
if _libs["CANapAPI64.dll"].has("Asap3SetupFifo", "stdcall"):
    Asap3SetupFifo = _libs["CANapAPI64.dll"].get("Asap3SetupFifo", "stdcall")
    Asap3SetupFifo.argtypes = [TAsap3Hdl, c_ushort, POINTER(tFifoSize)]
    Asap3SetupFifo.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 831
if _libs["CANapAPI64.dll"].has("Asap3SetupDataAcquisitionChnl", "stdcall"):
    Asap3SetupDataAcquisitionChnl = _libs["CANapAPI64.dll"].get("Asap3SetupDataAcquisitionChnl", "stdcall")
    Asap3SetupDataAcquisitionChnl.argtypes = [TAsap3Hdl, TModulHdl, String, enum_TFormat, c_ushort, c_ushort, c_bool]
    Asap3SetupDataAcquisitionChnl.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 835
if _libs["CANapAPI64.dll"].has("Asap3SetupDataAcquisitionChnl2", "stdcall"):
    Asap3SetupDataAcquisitionChnl2 = _libs["CANapAPI64.dll"].get("Asap3SetupDataAcquisitionChnl2", "stdcall")
    Asap3SetupDataAcquisitionChnl2.argtypes = [TAsap3Hdl, TModulHdl, String, enum_TFormat, c_ushort, c_ushort, c_bool, c_bool]
    Asap3SetupDataAcquisitionChnl2.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 839
if _libs["CANapAPI64.dll"].has("Asap3GetMeasurementListEntries", "stdcall"):
    Asap3GetMeasurementListEntries = _libs["CANapAPI64.dll"].get("Asap3GetMeasurementListEntries", "stdcall")
    Asap3GetMeasurementListEntries.argtypes = [TAsap3Hdl, TModulHdl, POINTER(POINTER(struct_MeasurementListEntries))]
    Asap3GetMeasurementListEntries.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 840
if _libs["CANapAPI64.dll"].has("Asap3GetMeasurementState", "stdcall"):
    Asap3GetMeasurementState = _libs["CANapAPI64.dll"].get("Asap3GetMeasurementState", "stdcall")
    Asap3GetMeasurementState.argtypes = [TAsap3Hdl, POINTER(tMeasurementState)]
    Asap3GetMeasurementState.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 841
if _libs["CANapAPI64.dll"].has("Asap3HasMCD3License", "stdcall"):
    Asap3HasMCD3License = _libs["CANapAPI64.dll"].get("Asap3HasMCD3License", "stdcall")
    Asap3HasMCD3License.argtypes = [TAsap3Hdl, POINTER(c_bool)]
    Asap3HasMCD3License.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 843
if _libs["CANapAPI64.dll"].has("Asap3GetRecorderType", "stdcall"):
    Asap3GetRecorderType = _libs["CANapAPI64.dll"].get("Asap3GetRecorderType", "stdcall")
    Asap3GetRecorderType.argtypes = [TAsap3Hdl, TRecorderID, POINTER(enum_TRecorderType)]
    Asap3GetRecorderType.restype = c_bool
